# python_package_template

./: DockerfileBuildWheel  DockerfileUnittesting  LICENSE  README.md  build_unittest_image.ps1  build_wheel.ps1  pyproject.toml  run_tests.ps1  test_release.ps1  test_usage.py
src/mypackage/: __init__.py  example.py  test_example.py
src/mypackage/helloworld/: helloworld.py  test_helloworld.py
